--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
             </intent-filter>
         </activity>
         <activity android:name="AESEncryptActivity"></activity>
+        <activity android:name="AESDecryptActivity"></activity>
 
     </application>
 </manifest>
