Trying to get SMS intercepting work.
KNOW ISSUE:
#1.Launch Decrypt activity from menu will lead to a
NullPointerException.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name="AESEncryptActivity"></activity>
-        <activity android:name="AESDecryptActivity"></activity>
+        <activity android:name="AESDecryptActivity">
+        </activity>
 
     </application>
 </manifest>
