--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,11 @@
         <activity android:name="AESEncryptActivity"></activity>
         <activity android:name="AESDecryptActivity">
         </activity>
+        <receiver android:name="SMSReceiver">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"></action>
+            </intent-filter>
+        </receiver>
 
     </application>
 </manifest>
