Choice of Alice or Bob
Finished implementing Check button to choose to launch Alice Activity or
Bob Activity.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </receiver>
         <activity android:name="JPakeActivity"></activity>
+        <activity android:name="JPakeActivityB"></activity>
 
     </application>
 </manifest>
